...
              justifyContent="space-between"
              alignItems="center">
              <Text variant="header" color="textPrimary">
                Tasks
              </Text>
              <TouchableOpacity
                testID="addTaskButton"
                onPress={goToCreateTask}
                style={styles.addTaskButton}>
                <AddTaskIcon
                  width={24}
                  height={24}
                  fill={theme.colors['textPrimary']}
...
